# PANL

./: .gitignore  README.md  pyproject.toml
configs/data/: tier1.yaml
configs/experiment/: e0_gemma27b.yaml  e0_qwen7b.yaml  e0_smoke.yaml
configs/model/: qwen0_5b.yaml  qwen7b.yaml
docs/: claims-and-evidence.md  experiment-plan.md  stage-1-findings.md
src/panl/: __init__.py  cli.py  config.py
src/panl/activations/: __init__.py  store.py
src/panl/analysis/: __init__.py  stats.py
src/panl/data/: __init__.py  blocks.py  build.py  facts.py  schema.py  splits.py  templates.py  validate.py
src/panl/experiments/: __init__.py  collect.py  controls.py  e0.py  routes.py  scoring.py
src/panl/models/: __init__.py  adapter.py  batching.py  confidence.py  positions.py  prompts.py  snapshot.py  spec.py  tokenizer.py
src/panl/reporting/: __init__.py  controls_report.py  e0_report.py  routes_report.py
tests/: conftest.py  test_package.py
tests/fixtures/: positions_qwen2_5_0_5b_instruct.json
tests/integration/: test_adapter_gpu.py  test_positions_qwen.py
tests/unit/: test_batching_store.py  test_blocks.py  test_build.py  test_controls.py  test_e0.py  test_facts.py  test_positions.py  test_routes.py  test_splits.py  test_stats.py  test_validate.py
